Included a welcome page

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,9 @@
     <div class="container">
         <div class="alert alert-success" role="alert">
             <h4 class="alert-heading">Well done!</h4>
-            <p>Aww yeah, you successfully read this important alert message. This example 
-                text is going to run a bit longer so that you can see how spacing within an 
-                alert works with this kind of content.</p>
+            <p>>Whether you're on the verge of stepping into the professional world or just exploring your future prospects, our Placement Predictor is here to assist you. Fill in the details below, and let's discover your potential success in campus placements together. After the prediction, we'll provide insights and tips to help you on your journey. Best of luck.</p>
             <hr>
-            <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+            <p class="mb-0">Welcome to Placement Predictor!</p>
           </div>
     </div>
     <div class="container" my-4>
